--- a/app/src/main/res/layout/user_registration_activity.xml
+++ b/app/src/main/res/layout/user_registration_activity.xml
@@ -84,7 +84,8 @@
             android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
             android:layout_marginStart="32dp" app:layout_constraintHorizontal_bias="0.0"
-            style="@android:style/Widget.Holo.Button"/>
+            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog" android:textColor="@color/colorPrimary"
+            android:background="@color/common_google_signin_btn_text_light_disabled"/>
 
 
 </android.support.constraint.ConstraintLayout>
