--- a/app/src/main/res/layout-v14/account_fragment.xml
+++ b/app/src/main/res/layout-v14/account_fragment.xml
@@ -6,48 +6,88 @@
                                              android:layout_height="match_parent"
                                              android:layout_gravity="center">
 
-
     <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp" app:srcCompat="@mipmap/ic_launcher_round"
-            android:id="@+id/imageView2" android:layout_marginTop="16dp"
+            android:contentDescription=""
+            android:id="@+id/btn_capture_photo"
+            android:layout_width="418dp"
+            android:layout_height="216dp"
+            android:src="@drawable/rectangle"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
+            app:layout_constraintEnd_toEndOf="parent"
+
+            app:layout_constraintHorizontal_bias="0.266"/>
+
+
+    <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/imageView2"
+
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="56dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="292dp" android:layout_marginStart="292dp"
+            android:src="@mipmap/ic_launcher"
+            app:srcCompat="@mipmap/ic_launcher_round"
+            app:civ_border_width="2dp"
+            app:civ_border_color="#FFFFFF"/>
+
     <TextView
-            android:text="Username"
-            android:layout_width="139dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvUsername" app:layout_constraintStart_toEndOf="@+id/imageView2"
-            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textSize="24sp"
-            app:layout_constraintTop_toTopOf="@+id/imageView2" app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginTop="16dp"/>
+            android:text="@string/username"
+            android:layout_width="118dp"
+            android:layout_height="34dp"
+            android:id="@+id/tvUsername"
+            android:textSize="24sp"
+            android:layout_marginTop="56dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="28dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="28dp"/>
     <TextView
-            android:text="Location"
-            android:layout_width="0dp"
-            android:layout_height="19dp"
+            android:text="@string/location"
+            android:layout_width="163dp"
+            android:layout_height="22dp"
             android:id="@+id/tvAddress"
-            app:layout_constraintTop_toBottomOf="@+id/tvUsername"
-            app:layout_constraintStart_toEndOf="@+id/imageView2" android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginTop="8dp"/>
+
+            app:layout_constraintEnd_toEndOf="@+id/tvUsername"
+            app:layout_constraintStart_toStartOf="@+id/tvUsername"
+            app:layout_constraintHorizontal_bias="0.0"
+            tools:layout_editor_absoluteY="106dp"
+            app:layout_constraintTop_toBottomOf="@+id/ratingBar"/>
     <RatingBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/ratingBar" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="@+id/tvUsername"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-            app:layout_constraintStart_toEndOf="@+id/tvUsername" android:layout_marginLeft="2dp"
-            android:layout_marginStart="2dp" style="@android:style/Widget.DeviceDefault.RatingBar.Small"
+            android:id="@+id/ratingBar"
+            android:gravity="center"
+            style="@android:style/Widget.DeviceDefault.RatingBar.Small"
             android:numStars="5"
-            android:rating="4" android:stepSize="1" app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintBottom_toBottomOf="@+id/tvUsername" app:layout_constraintVertical_bias="0.0"/>
+            android:progressTint="#444444"
+            android:rating="4" android:stepSize="1"
+            app:layout_constraintStart_toStartOf="@+id/tvUsername"
+            app:layout_constraintTop_toBottomOf="@+id/tvUsername"/>
+
+    <TextView
+            android:text="@string/description"
+            android:layout_width="255dp"
+            android:layout_height="69dp"
+            android:id="@+id/tvDescription"
+            app:layout_constraintEnd_toEndOf="@+id/tvUsername"
+            app:layout_constraintStart_toStartOf="@+id/tvUsername"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintTop_toBottomOf="@+id/tvAddress"/>
+
+    <Button android:text="@string/edit" android:textColor="#444444" android:background="#FFFFFF"
+            android:layout_width="103dp" android:layout_height="29dp"
+            app:layout_constraintEnd_toEndOf="@+id/imageView2"
+            android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView2"
+            app:layout_constraintStart_toStartOf="@+id/imageView2"/>
+
     <android.support.v7.widget.RecyclerView
-            android:layout_width="395dp"
-            android:layout_height="599dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="390dp"
+            android:layout_height="467dp"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvAddress"
+            app:layout_constraintVertical_bias="0.781" app:layout_constraintHorizontal_bias="0.4"/>
 </android.support.constraint.ConstraintLayout>
