--- a/app/src/main/res/layout/splash_activity.xml
+++ b/app/src/main/res/layout/splash_activity.xml
@@ -8,10 +8,11 @@
         tools:context=".Splash">
 
     <ImageView
+            android:contentDescription=""
             android:id="@+id/splashLogo"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:src="@drawable/ic_launcher_background"
+            android:layout_width="344dp"
+            android:layout_height="361dp"
+            android:src="@drawable/logo"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
@@ -20,6 +21,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.49" app:layout_constraintVertical_bias="0.285"/>
 
 </android.support.constraint.ConstraintLayout>
