--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#009688</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#DDFFE7</color>
+    <color name="colorSpearmint">#98d7c2</color>
+    <color name="colorPrimaryDark">#167d7f</color>
+    <color name="colorPrimary">#29A0B1</color>
 </resources>
