--- a/app/src/main/res/layout-v14/account_fragment.xml
+++ b/app/src/main/res/layout-v14/account_fragment.xml
@@ -28,9 +28,7 @@
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="292dp" android:layout_marginStart="292dp"
             android:src="@mipmap/ic_launcher"
-            app:srcCompat="@mipmap/ic_launcher_round"
-            app:civ_border_width="2dp"
-            app:civ_border_color="#FFFFFF"/>
+            app:srcCompat="@mipmap/ic_launcher_round"/>
 
     <TextView
             android:text="@string/username"
