--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,9 +14,18 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/navigation"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-            android:layout_marginBottom="8dp" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"/>
+            app:layout_constraintEnd_toEndOf="parent"  android:layout_marginRight="0dp"
+            android:layout_marginBottom="8dp" android:layout_marginLeft="0dp" android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp">
+
+        <android.support.v7.widget.RecyclerView
+                android:padding="8dp"
+                android:id="@+id/recyclerPosts"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+    </FrameLayout>
 
     <android.support.design.widget.BottomNavigationView
             android:id="@+id/navigation"
