--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorAccent">#DDFFE7</color>
     <color name="colorSpearmint">#98d7c2</color>
-    <color name="colorPrimaryDark">#167d7f</color>
+    <color name="colorPrimaryDark">#0b5757</color>
     <color name="colorPrimary">#29A0B1</color>
 </resources>
