--- a/app/src/main/res/drawable/rectangle.xml
+++ b/app/src/main/res/drawable/rectangle.xml
@@ -1,4 +1,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle" >
-    <solid android:color="@color/colorAccent" />
+
+    <gradient
+            android:startColor="@color/colorPrimaryDark"
+
+            android:endColor="@color/colorSpearmint"
+            android:angle="315"/>
+    <corners
+            android:radius="20dp"/>
+    <!--<solid android:color="@color/colorSpearmint" />-->
 </shape>
