--- a/app/src/main/res/layout/user_registration_activity.xml
+++ b/app/src/main/res/layout/user_registration_activity.xml
@@ -4,6 +4,18 @@
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent">
+
+    <!--<ImageView-->
+            <!--android:contentDescription=""-->
+            <!--android:id="@+id/btn_capture_photo"-->
+            <!--android:layout_width="399dp"-->
+            <!--android:layout_height="594dp"-->
+            <!--android:src="@drawable/rectangle"-->
+            <!--app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"-->
+            <!--app:layout_constraintEnd_toEndOf="parent"-->
+
+            <!--android:layout_marginTop="16dp"/>-->
+
     <TextView
             android:text="@string/greeting"
             android:layout_width="wrap_content"
@@ -16,73 +28,87 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            app:layout_constraintHorizontal_bias="0.039" android:layout_marginTop="24dp"
+            android:layout_marginTop="28dp"
             app:layout_constraintTop_toTopOf="parent"/>
     <EditText
-            android:layout_width="0dp"
+            android:id="@+id/etFirstNameRegister"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
-            android:id="@+id/editText"
-            android:layout_marginStart="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="56dp"
+            android:hint="First Name"
+            android:layout_marginTop="80dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             app:layout_constraintTop_toBottomOf="@+id/textView2"
-            android:hint="@string/what_s_your_name"
-            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/editText3"
-            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"/>
+            tools:layout_editor_absoluteX="0dp"/>
     <EditText
-            android:layout_width="0dp"
+            android:id="@+id/etLastNameRegister"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:hint="Last Name"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/etFirstNameRegister"
+            tools:layout_editor_absoluteX="20dp"/>
+    <EditText
+            android:id="@+id/etEmailRegister"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:ems="10"
-            android:id="@+id/editText2" android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText" android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
-            app:layout_constraintHorizontal_bias="0.0" android:hint="@string/email_address"/>
+            android:hint="@string/email_address"
+            tools:layout_editor_absoluteX="20dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/etLastNameRegister"/>
+    <!--<EditText-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:inputType="date"-->
+            <!--android:ems="10"-->
+            <!--android:id="@+id/editText3" app:layout_constraintEnd_toEndOf="parent"-->
+            <!--android:layout_marginEnd="16dp" android:layout_marginRight="16dp"-->
+            <!--android:hint="@string/birthday" android:layout_marginTop="56dp"-->
+            <!--app:layout_constraintTop_toBottomOf="@+id/textView2"-->
+            <!--app:layout_constraintBaseline_toBaselineOf="@+id/editText"/>-->
     <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="date"
-            android:ems="10"
-            android:id="@+id/editText3" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
-            android:hint="@string/birthday" android:layout_marginTop="56dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"
-            app:layout_constraintBaseline_toBaselineOf="@+id/editText"/>
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/editText5" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText2" app:layout_constraintHorizontal_bias="0.0"
-            android:hint="@string/password"/>
-    <EditText
-            android:layout_width="0dp"
+            android:id="@+id/etPasswordRegister"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
-            android:id="@+id/editText6" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText5" android:hint="@string/verify_password"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:hint="@string/password"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/etEmailRegister"/>
+    <EditText
+            android:id="@+id/etVerifyRegister"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:ems="10"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:hint="@string/verify_password"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/etPasswordRegister"/>
     <Button
+            android:id="@+id/registerBtn"
             android:text="@string/register"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/registerBtn" android:layout_marginBottom="48dp"
+            android:layout_marginBottom="200dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
+            android:layout_marginEnd="32dp" android:layout_marginRight="20dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="20dp"
             android:layout_marginStart="32dp" app:layout_constraintHorizontal_bias="0.0"
             style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog" android:textColor="@color/colorPrimary"
             android:background="@color/common_google_signin_btn_text_light_disabled"/>
