--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -7,7 +7,7 @@
             android:title="@string/home"
             android:icon="@drawable/home"/>
     <item android:id="@+id/posting_tab"
-          android:title="Create"
+          android:title="CREATE POST"
           android:icon="@drawable/create"/>
 
     <item
