fixed hardcoded strings

--- a/app/src/main/res/layout/user_registration_activity.xml
+++ b/app/src/main/res/layout/user_registration_activity.xml
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
-            android:hint="First Name"
+            android:hint="@string/first_name"
             android:layout_marginTop="80dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
-            android:hint="Last Name"
+            android:hint="@string/last_name"
             android:layout_marginTop="8dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
