--- a/app/src/main/res/drawable/rectangle.xml
+++ b/app/src/main/res/drawable/rectangle.xml
@@ -1,12 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle" >
+    <corners android:radius="10dp" />
 
-    <gradient
-            android:startColor="@color/colorPrimaryDark"
-
-            android:endColor="@color/colorSpearmint"
-            android:angle="315"/>
-    <corners
-            android:radius="10dp"/>
-    <!--<solid android:color="@color/colorSpearmint" />-->
+    <solid android:color="@color/colorPrimaryDark"/>
 </shape>
