--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -3,10 +3,11 @@
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
+                                             android:layout_height="match_parent"
+                                            android:background="@color/colorSpearmint">
     <ImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="239dp"
+            android:layout_height="236dp"
             android:src="@drawable/peter_and_friends_logo"
             android:id="@+id/imageView"
             android:layout_marginTop="32dp"
@@ -17,6 +18,32 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"/>
+
+    <ImageView
+            android:contentDescription=""
+            android:id="@+id/bgSquare"
+            android:layout_width="348dp"
+            android:layout_height="264dp"
+            android:src="@drawable/white_rectangle"
+
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
+            app:layout_constraintHorizontal_bias="0.489" android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView"/>
+
+    <ImageView android:layout_width="30dp" android:layout_height="30dp"
+               android:src="@drawable/account"
+               app:layout_constraintEnd_toStartOf="@+id/etEmail"
+               app:layout_constraintTop_toTopOf="@+id/etEmail" android:id="@+id/imageView3"
+               android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="4dp"/>
+
+    <ImageView android:layout_width="30dp" android:layout_height="30dp"
+               android:src="@drawable/key"
+               app:layout_constraintEnd_toStartOf="@+id/etPassword"
+               android:layout_marginEnd="8dp"
+               android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="@+id/etPassword"
+               android:layout_marginTop="8dp"/>
     <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -24,14 +51,14 @@
             android:ems="10"
             android:text="username@gmail.com"
             android:id="@+id/etEmail"
-            android:hint="Email Address" android:layout_marginTop="28dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            android:hint="Email Address" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="@+id/bgSquare"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="64dp"
-            android:layout_marginStart="64dp"
-            android:layout_marginEnd="64dp"
-            android:layout_marginRight="64dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginStart="80dp"
+            android:layout_marginEnd="80dp"
+            android:layout_marginRight="80dp"
             app:layout_constraintHorizontal_bias="0.0"/>
 
     <EditText
@@ -43,31 +70,54 @@
             android:hint="Password"
             android:text="123456"
             android:layout_marginTop="8dp"
+
+            android:layout_marginLeft="80dp"
+            android:layout_marginStart="80dp"
+            android:layout_marginEnd="80dp"
+            android:layout_marginRight="80dp"
             app:layout_constraintTop_toBottomOf="@+id/etEmail"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="64dp"
-            android:layout_marginStart="64dp" android:layout_marginEnd="64dp" android:layout_marginRight="64dp"/>
+            app:layout_constraintStart_toStartOf="parent"/>
     <Button
-            android:text="Login"
+            android:text="Log in"
             android:layout_width="0dp"
+            android:textSize="20sp"
             android:layout_height="wrap_content"
             android:id="@+id/loginButton"
-            android:layout_marginTop="16dp"
-            android:background="@color/colorPrimaryDark"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/rectangle"
             android:textColor="@android:color/white"
             app:layout_constraintTop_toBottomOf="@+id/etPassword" android:layout_marginEnd="80dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="80dp"
             android:layout_marginStart="80dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="80dp"/>
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="80dp"
+            app:layout_constraintHorizontal_bias="0.0"/>
 
     <TextView
-            android:text="Register"
+            android:text="Don't have an account?"
             android:textSize="16sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/registerButton" android:layout_marginTop="24dp"
+            android:id="@+id/noAccount"
+
+            android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@+id/loginButton"
             android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
             android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp"/>
+            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.352"/>
+
+    <TextView
+            android:text="Sign Up."
+            android:textSize="16sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/registerButton"
+            android:textColor="@color/colorPrimary"
+            android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/loginButton"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/noAccount"/>
+
 </android.support.constraint.ConstraintLayout>
