--- a/app/src/main/res/layout/user_registration_activity.xml
+++ b/app/src/main/res/layout/user_registration_activity.xml
@@ -3,62 +3,72 @@
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
-
-    <!--<ImageView-->
-            <!--android:contentDescription=""-->
-            <!--android:id="@+id/btn_capture_photo"-->
-            <!--android:layout_width="399dp"-->
-            <!--android:layout_height="594dp"-->
-            <!--android:src="@drawable/rectangle"-->
-            <!--app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"-->
-            <!--app:layout_constraintEnd_toEndOf="parent"-->
+                                             android:layout_height="match_parent"
+                                             android:background="@color/colorSpearmint">
+    <ImageView
+            android:layout_width="174dp"
+            android:layout_height="157dp"
+            android:src="@drawable/peter_and_friends_logo"
+            android:id="@+id/imageView"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.497"/>
 
     <ImageView
             android:contentDescription=""
             android:id="@+id/btn_capture_photo"
-            android:layout_width="350dp"
-            android:layout_height="392dp"
+            android:layout_width="348dp"
+            android:layout_height="454dp"
             android:src="@drawable/white_rectangle"
 
-            android:layout_marginTop="52dp" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
-            app:layout_constraintHorizontal_bias="0.488" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
+            app:layout_constraintHorizontal_bias="0.489" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/signUpDesc"/>
 
 
     <ImageView android:layout_width="30dp" android:layout_height="30dp"
                android:src="@drawable/account"
                app:layout_constraintEnd_toStartOf="@+id/etFirstNameRegister"
                app:layout_constraintTop_toTopOf="@+id/etFirstNameRegister" android:id="@+id/imageView3"
-               android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
+               android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="4dp"/>
 
     <ImageView android:layout_width="30dp" android:layout_height="30dp"
                android:src="@drawable/mail"
                app:layout_constraintEnd_toStartOf="@+id/etEmailRegister"
                android:id="@+id/imageView4"
                android:layout_marginEnd="8dp"
-               android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="@+id/etEmailRegister"/>
+               android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="@+id/etEmailRegister"
+               android:layout_marginTop="8dp"/>
     <ImageView android:layout_width="30dp" android:layout_height="30dp"
                android:src="@drawable/key"
                app:layout_constraintEnd_toStartOf="@+id/etPasswordRegister"
                android:layout_marginEnd="8dp"
-               android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="@+id/etPasswordRegister"/>
+               android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="@+id/etPasswordRegister"
+               android:layout_marginTop="8dp"/>
 
     <TextView
             android:text="@string/greeting"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView2"
-            android:textSize="25sp"
+            android:id="@+id/signUpDesc"
+            android:textSize="20sp"
+
+            android:textColor="@color/colorPrimaryDark"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="68dp"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintHorizontal_bias="0.494"
+            app:layout_constraintTop_toBottomOf="@+id/imageView"/>
     <EditText
             android:id="@+id/etFirstNameRegister"
 
@@ -67,11 +77,11 @@
             android:inputType="textPersonName"
             android:ems="10"
             android:hint="@string/first_name"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="16dp"
             android:layout_marginLeft="80dp"
             android:layout_marginRight="80dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"
-            tools:layout_editor_absoluteX="0dp"/>
+            app:layout_constraintTop_toTopOf="@id/btn_capture_photo"
+            tools:layout_editor_absoluteX="80dp"/>
     <EditText
             android:id="@+id/etLastNameRegister"
             android:layout_width="match_parent"
@@ -96,16 +106,6 @@
             android:layout_marginLeft="80dp"
             android:layout_marginRight="80dp"
             app:layout_constraintTop_toBottomOf="@+id/etLastNameRegister"/>
-    <!--<EditText-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:inputType="date"-->
-            <!--android:ems="10"-->
-            <!--android:id="@+id/editText3" app:layout_constraintEnd_toEndOf="parent"-->
-            <!--android:layout_marginEnd="16dp" android:layout_marginRight="16dp"-->
-            <!--android:hint="@string/birthday" android:layout_marginTop="56dp"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/textView2"-->
-            <!--app:layout_constraintBaseline_toBaselineOf="@+id/editText"/>-->
     <EditText
             android:id="@+id/etPasswordRegister"
             android:layout_width="match_parent"
@@ -133,9 +133,11 @@
     <Button
             android:id="@+id/registerBtn"
             android:text="@string/register"
+            android:textSize="20sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
+            android:background="@drawable/rectangle"
             android:layout_marginEnd="80dp"
             android:layout_marginRight="80dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -143,8 +145,27 @@
             android:layout_marginStart="80dp" app:layout_constraintHorizontal_bias="0.0"
             style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
             android:textColor="@android:color/white"
-            android:background="@color/colorPrimaryDark"
-            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/etVerifyRegister"/>
+
+            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/etVerifyRegister"/>
+
+    <TextView
+            android:text="By signing up, you agree to our \nTerms, Data Policy, and Cookies \nPolicy."
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/policyText"
+            android:textSize="10sp"
+            android:minLines="3"
+            android:maxLines="3"
+            android:gravity="center"
+
+            android:textColor="@color/colorPrimaryDark"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/registerBtn"/>
 
 
 </android.support.constraint.ConstraintLayout>
