Job Application is working - will work out the details and logic/testing l8r

--- a/app/src/main/res/layout/job_detail_layout.xml
+++ b/app/src/main/res/layout/job_detail_layout.xml
@@ -132,6 +132,7 @@
 
 
         <Button
+                android:id="@+id/btnJobApply"
                 android:layout_width="90dp"
                 android:layout_height="40dp"
                 android:text="@string/apply"
