--- a/app/src/main/res/drawable/btn_default.xml
+++ b/app/src/main/res/drawable/btn_default.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
-    <corners android:radius="8dp"/>
-    <solid android:color="@color/colorAccent"/>
+    <corners android:radius="3dp"/>
+    <solid android:color="@color/colorPrimaryDark"/>
 
 
 </shape>
