--- a/app/src/main/res/layout/job_post_row.xml
+++ b/app/src/main/res/layout/job_post_row.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v7.widget.CardView android:layout_height="wrap_content"
+<android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="wrap_content"
                                     android:layout_width="wrap_content"
                                     xmlns:android="http://schemas.android.com/apk/res/android"
                                     android:layout_marginLeft="8dp"
                                     android:layout_marginRight="8dp"
-                                    android:layout_marginTop = "8dp">
+                                    android:layout_marginTop = "16dp">
 
 
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                  xmlns:app="http://schemas.android.com/apk/res-auto"
                                                  xmlns:tools="http://schemas.android.com/tools"
-                                                 android:layout_width="match_parent"
+                                                 android:layout_width="410dp"
                                                  android:layout_height="match_parent">
 
         <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/imageView5"
+                android:id="@+id/ivJobPostRowImg"
 
                 android:layout_width="70dp"
                 android:layout_height="63dp"
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:text="Job Title"
                 android:textColor="@color/colorPrimaryDark"
-                app:layout_constraintStart_toEndOf="@+id/imageView5"
+                app:layout_constraintStart_toEndOf="@+id/ivJobPostRowImg"
                 android:layout_marginTop="20dp"
                 app:layout_constraintTop_toTopOf="parent"
         />
@@ -44,7 +44,7 @@
                 android:text="Author"
                 android:textColor="@color/colorPrimaryDark"
                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/imageView5" android:layout_marginStart="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/ivJobPostRowImg" android:layout_marginStart="16dp"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"/>
 
         <TextView
@@ -54,13 +54,13 @@
                 android:text="Date"
                 android:textColor="@color/colorPrimaryDark"
                 app:layout_constraintTop_toBottomOf="@+id/tvJobTitle"
-                app:layout_constraintStart_toEndOf="@+id/imageView5"
+                app:layout_constraintStart_toEndOf="@+id/ivJobPostRowImg"
                 android:layout_marginStart="20dp" android:layout_marginLeft="20dp"/>
 
         <TextView
                 android:id="@+id/tvDescription"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="267dp"
+                android:layout_height="51dp"
                 android:text="JobDescription"
                 android:textColor="@color/colorPrimaryDark"
                 app:layout_constraintStart_toStartOf="parent"
@@ -71,11 +71,20 @@
                 android:id="@+id/tvJobPay"
                 android:text="$40/HR"
                 android:textColor="@color/colorPrimaryDark"
-                android:layout_width="62dp"
-                android:layout_height="26dp"
-                android:layout_marginTop="20dp" app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/tvJobTitle" android:layout_marginStart="104dp"
-                android:layout_marginLeft="104dp"/>
+                android:layout_width="73dp"
+                android:layout_height="19dp"
+                app:layout_constraintStart_toEndOf="@+id/tvAuthor"
+                android:layout_marginLeft="44dp" android:layout_marginStart="44dp" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/ivJobPostRowImg"/>
+
+        <Button
+                android:id="@+id/btnJobDetail"
+                android:text="Details"
+                android:layout_width="69dp" android:layout_height="178dp"
+                android:background="@drawable/btn_default"
+                android:textColor="#FFFFFF"
+                app:layout_constraintStart_toEndOf="@+id/ivJobPostRowImg" android:layout_marginStart="240dp"
+                android:layout_marginLeft="240dp" tools:layout_editor_absoluteY="0dp"/>
 
     </android.support.constraint.ConstraintLayout>
 
