--- a/app/src/main/res/layout/user_registration_activity.xml
+++ b/app/src/main/res/layout/user_registration_activity.xml
@@ -22,16 +22,15 @@
     <ImageView
             android:contentDescription=""
             android:id="@+id/btn_capture_photo"
-            android:layout_width="348dp"
-            android:layout_height="0dp"
+            android:layout_width="350dp"
+            android:layout_height="500dp"
             android:src="@drawable/white_rectangle"
 
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
             app:layout_constraintHorizontal_bias="0.489" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/signUpDesc" android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
+            app:layout_constraintTop_toBottomOf="@+id/signUpDesc"/>
 
 
     <ImageView android:layout_width="30dp" android:layout_height="30dp"
@@ -52,7 +51,7 @@
                app:layout_constraintEnd_toStartOf="@+id/etPasswordRegister"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="@+id/etPasswordRegister"
-               android:layout_marginTop="8dp" android:id="@+id/imageView5"/>
+               android:layout_marginTop="8dp"/>
 
     <TextView
             android:text="@string/greeting"
@@ -73,77 +72,79 @@
     <EditText
             android:id="@+id/etFirstNameRegister"
 
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
             android:hint="@string/first_name"
             android:layout_marginTop="16dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginRight="80dp"
             app:layout_constraintTop_toTopOf="@id/btn_capture_photo"
-            app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo"
-            app:layout_constraintStart_toStartOf="@+id/btn_capture_photo" android:layout_marginLeft="48dp"
-            android:layout_marginStart="48dp" android:layout_marginEnd="48dp" android:layout_marginRight="48dp"/>
+            tools:layout_editor_absoluteX="80dp"/>
     <EditText
             android:id="@+id/etLastNameRegister"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
             android:hint="@string/last_name"
             android:layout_marginTop="8dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginRight="80dp"
             app:layout_constraintTop_toBottomOf="@+id/etFirstNameRegister"
-            app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo"
-            app:layout_constraintStart_toStartOf="@+id/btn_capture_photo"
-            android:layout_marginLeft="48dp" android:layout_marginStart="48dp" android:layout_marginEnd="48dp"
-            android:layout_marginRight="48dp" app:layout_constraintHorizontal_bias="0.4"/>
+            tools:layout_editor_absoluteX="20dp"/>
+
+    <EditText
+            android:id="@+id/etUserName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:ems="10"
+            android:hint="Username"
+
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginRight="80dp"
+             app:layout_constraintTop_toBottomOf="@+id/etLastNameRegister"/>
+
+
     <EditText
             android:id="@+id/etEmailRegister"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:ems="10"
             android:hint="@string/email_address"
-            android:layout_marginTop="52dp"
-            app:layout_constraintTop_toBottomOf="@+id/etLastNameRegister"
-            app:layout_constraintStart_toStartOf="@+id/btn_capture_photo"
-            app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo" android:layout_marginLeft="48dp"
-            android:layout_marginStart="48dp" android:layout_marginEnd="48dp" android:layout_marginRight="48dp"/>
-
-    <EditText
-            android:id="@+id/etUserName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="text"
-            android:ems="8"
-            android:hint="Username"
-            app:layout_constraintStart_toStartOf="@+id/btn_capture_photo"
-            app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo" android:layout_marginLeft="48dp"
-            android:layout_marginStart="48dp" android:layout_marginEnd="48dp" android:layout_marginRight="48dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etLastNameRegister"/>
-
-
+            tools:layout_editor_absoluteX="20dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginRight="80dp"
+            app:layout_constraintTop_toBottomOf="@+id/etUserName"/>
     <EditText
             android:id="@+id/etPasswordRegister"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
+            app:layout_constraintEnd_toEndOf="parent"
             android:hint="@string/password"
-            app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo"
-            app:layout_constraintStart_toStartOf="@+id/btn_capture_photo" android:layout_marginLeft="48dp"
-            android:layout_marginStart="48dp" android:layout_marginEnd="48dp" android:layout_marginRight="48dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etEmailRegister"/>
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginRight="80dp"
+            app:layout_constraintTop_toBottomOf="@+id/etEmailRegister"/>
     <EditText
             android:id="@+id/etVerifyRegister"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
+            app:layout_constraintEnd_toEndOf="parent"
             android:hint="@string/verify_password"
-            app:layout_constraintTop_toBottomOf="@+id/etPasswordRegister"
-            app:layout_constraintStart_toStartOf="@+id/btn_capture_photo"
-            app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo" android:layout_marginLeft="48dp"
-            android:layout_marginStart="48dp" android:layout_marginEnd="48dp" android:layout_marginRight="48dp"/>
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginRight="80dp"
+            app:layout_constraintTop_toBottomOf="@+id/etPasswordRegister"/>
     <Button
             android:id="@+id/registerBtn"
             android:text="@string/register"
@@ -163,13 +164,13 @@
             android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/etVerifyRegister"/>
 
     <TextView
-            android:text="By signing up, you agree to our \nTerms, Data Policy, and Cookies \nPolicy. Lucky for you, \nwe have none."
+            android:text="By signing up, you agree to our \nTerms, Data Policy, and Cookies \nPolicy. Lucky for you,\nwe have none."
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/policyText"
             android:textSize="10sp"
             android:minLines="4"
-            android:maxLines="5"
+            android:maxLines="4"
             android:gravity="center"
 
             android:textColor="@color/colorPrimaryDark"
@@ -179,7 +180,10 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/registerBtn"/>
+            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/registerBtn"/>
 
 
 </android.support.constraint.ConstraintLayout>
+
+
+
